# a-lo-paisa

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
data/: glossary_embeddings.npz  paisa_glossary.json  voice_reference.aif
scripts/: build_embeddings.py  cli.py  prefetch.py
src/a_lo_paisa/: __init__.py  config.py  llm.py  paisa_transform.py  pipeline.py  provider.py  retrieve.py  synthesize.py  transcribe.py
